--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mêsversário-ia",
+  "name": "gerador-de-fotos-de-mesversário",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "@google/genai": "^1.39.0",
-    "react": "^19.2.4"
+    "@google/genai": "^1.40.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
